Changelog
=========

3.0.6 - unreleased
------------------


3.0.5 - July 11, 2013
---------------------

- Fix a regression in creating new Reflectors and unindexing
  them when they are removed.
  [davisagli]

3.0.4 - July 9, 2013
--------------------

- Pass the base reflector path to sub-proxies when instantiating them
  so they can determine their filesystem path even when not
  acquisition-wrapped. Needed for compatibility with collective.indexing.
  [davisagli]

3.0.3 - July 5, 2013
--------------------

- Make ReflectoFile's SearchableText method use TextIndexNG3 converters
  if available. This is useful when indexing using collective.solr
  instead of TextIndexNG3 or the default Plone catalog.
  [davisagli]

3.0.2 - July 3, 2013
--------------------

- Changed the technique used to avoid indexing reflected items
  in live mode. The new technique does not conflict with
  collective.indexing's monkey patches of indexing methods.
  [davisagli]

- Detect charset of files and encode as utf8 when indexing
  SearchableText, even when not using textindexng.
  [davisagli]

- Add explicit zope.app.container dependency.
  [danjacka]

3.0.1 - June 19, 2013
---------------------

- Fix regression preventing the creation of new Reflectors.
  [davisagli]

3.0 - June 18, 2013
-------------------

- If plone.app.uuid is present, provide a UUID for reflected files.
  The UUID is based on the main reflector's UID and the file's path.
  [davisagli]


3.0b1 - January 23, 2013
------------------------

- Make sure reflected files implement all three methods (!!) to return the
  content type. This fixes problems displaying text files.

- Log skipped files when iterating over directory contents.

- Do manual splitting of filenames when indexing content. This allows searching
  for filenames. This previously did not work because the standard indexer strips
  dots, which does not work well for filenames.


2.5.1 - May 8, 2012
-------------------

- Package fix [aclark]
